[gd_scene load_steps=8 format=3 uid="uid://bacsxj46dvfla"]

[ext_resource type="Script" uid="uid://skak4bakf6ik" path="res://Scripts/ui/end_menu.gd" id="1_jgk52"]
[ext_resource type="Texture2D" uid="uid://bw3amxscqygqq" path="res://assets/UI/naveena/background_scaled.png" id="1_xhijr"]
[ext_resource type="FontFile" uid="uid://cfrp63w0hyxlv" path="res://assets/Font/MathewCarter/Charter Regular.ttf" id="4_cxrfc"]
[ext_resource type="StyleBox" uid="uid://1lsqtg2a4k5l" path="res://resources/button_hover_texture.tres" id="5_ajodo"]
[ext_resource type="Texture2D" uid="uid://xwvoenwjx0nj" path="res://assets/UI/TinySword/UI/Button_Blue.png" id="5_jgk52"]
[ext_resource type="StyleBox" uid="uid://d1d80l7b6kqnf" path="res://resources/button_texture.tres" id="5_omusw"]
[ext_resource type="Texture2D" uid="uid://dss4kfchq43cf" path="res://assets/UI/TinySword/UI/Checked_Icon.png" id="6_omusw"]

[node name="EndMenu" type="CanvasLayer"]
script = ExtResource("1_jgk52")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xhijr")
stretch_mode = 1

[node name="Outcome" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 442.0
offset_top = 59.0
offset_right = 829.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_cxrfc")
theme_override_font_sizes/font_size = 50
text = "You beat the level"

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -226.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 70
alignment = 1

[node name="NextLevelButton" type="Button" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_cxrfc")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = ExtResource("5_ajodo")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_omusw")
theme_override_styles/hover_pressed = ExtResource("5_omusw")
theme_override_styles/hover_mirrored = ExtResource("5_ajodo")
theme_override_styles/hover = ExtResource("5_ajodo")
theme_override_styles/pressed_mirrored = ExtResource("5_omusw")
theme_override_styles/pressed = ExtResource("5_omusw")
theme_override_styles/normal_mirrored = ExtResource("5_omusw")
theme_override_styles/normal = ExtResource("5_omusw")
text = "Next Level
"

[node name="RestartButton" type="Button" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath("../NextLevelButton")
focus_next = NodePath("../NextLevelButton")
focus_previous = NodePath(".")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_cxrfc")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = ExtResource("5_ajodo")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_omusw")
theme_override_styles/hover_pressed = ExtResource("5_omusw")
theme_override_styles/hover_mirrored = ExtResource("5_ajodo")
theme_override_styles/hover = ExtResource("5_ajodo")
theme_override_styles/pressed_mirrored = ExtResource("5_omusw")
theme_override_styles/pressed = ExtResource("5_omusw")
theme_override_styles/normal_mirrored = ExtResource("5_omusw")
theme_override_styles/normal = ExtResource("5_omusw")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_bottom = NodePath("../NextLevelButton")
focus_next = NodePath("../NextLevelButton")
focus_previous = NodePath(".")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_cxrfc")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = ExtResource("5_ajodo")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_omusw")
theme_override_styles/hover_pressed = ExtResource("5_omusw")
theme_override_styles/hover_mirrored = ExtResource("5_ajodo")
theme_override_styles/hover = ExtResource("5_ajodo")
theme_override_styles/pressed_mirrored = ExtResource("5_omusw")
theme_override_styles/pressed = ExtResource("5_omusw")
theme_override_styles/normal_mirrored = ExtResource("5_omusw")
theme_override_styles/normal = ExtResource("5_omusw")
text = "Main Menu"

[node name="ClearTime" type="Label" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 352.0
offset_top = 185.0
offset_right = 902.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_cxrfc")
theme_override_font_sizes/font_size = 50
text = "Clear Time: 0.00 s"
horizontal_alignment = 1

[node name="BestClearTime" type="Label" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 354.0
offset_top = 250.0
offset_right = 904.0
offset_bottom = 324.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_cxrfc")
theme_override_font_sizes/font_size = 50
text = "Best Time: 0.00 s"
horizontal_alignment = 1

[node name="MarginContainerTargetTime" type="MarginContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 250.0
offset_top = 328.0
offset_right = 1074.0
offset_bottom = 399.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="TargetTime" type="Label" parent="TextureRect/MarginContainerTargetTime"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("4_cxrfc")
theme_override_font_sizes/font_size = 50
text = "Bonus Target Time: 0.00 s"
horizontal_alignment = 1

[node name="CheckBox" type="Sprite2D" parent="TextureRect/MarginContainerTargetTime"]
position = Vector2(81, 44)
texture = ExtResource("5_jgk52")

[node name="CheckedIcon" type="Sprite2D" parent="TextureRect/MarginContainerTargetTime"]
unique_name_in_owner = true
position = Vector2(81, 44)
texture = ExtResource("6_omusw")

[connection signal="pressed" from="TextureRect/MarginContainer/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
